--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,6 @@
 [submodule "vim/vim.symlink/bundle/vim-coffee-script"]
 	path = vim/vim.symlink/bundle/vim-coffee-script
 	url = https://github.com/kchmck/vim-coffee-script.git
-[submodule "vim/vim.symlink/bundle/command-t"]
-	path = vim/vim.symlink/bundle/command-t
-	url = git://git.wincent.com/command-t.git
 [submodule "vim/vim.symlink/bundle/handlebars"]
 	path = vim/vim.symlink/bundle/handlebars
 	url = git://github.com/nono/vim-handlebars.git
@@ -22,3 +19,6 @@
 [submodule "vim/vim.symlink/bundle/mustache.vim"]
 	path = vim/vim.symlink/bundle/mustache.vim
 	url = https://github.com/juvenn/mustache.vim.git
+[submodule "vim/vim.symlink/bundle/ctrl-p.vim"]
+	path = vim/vim.symlink/bundle/ctrl-p.vim
+	url = https://github.com/kien/ctrlp.vim.git
