--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vim/vim.symlink/bundle/vim-gitgutter"]
 	path = vim/vim.symlink/bundle/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter.git
+[submodule "vim/vim.symlink/bundle/ember.vim"]
+	path = vim/vim.symlink/bundle/ember.vim
+	url = https://github.com/dsawardekar/ember.vim
