--- a/zaius.yml
+++ b/zaius.yml
@@ -9,11 +9,11 @@ base04: "bdbdbd"
 base05: "d4d4d4"
 base06: "e7e7e7"
 base07: "f7f7f7"
-base08: "ff9999"
-base09: "ffcc99"
-base0A: "ffff99"
-base0B: "99ff99"
-base0C: "99ffff"
-base0D: "9999ff"
-base0E: "ff99ff"
-base0F: "ff99cc"
+base08: "ff6b6b"
+base09: "ffb56b"
+base0A: "ffff6b"
+base0B: "6bff6b"
+base0C: "6bffff"
+base0D: "6b6bff"
+base0E: "ff6bff"
+base0F: "ff6bb5"
