Move mac tmux bar to top.

--- a/tmux.mac.conf
+++ b/tmux.mac.conf
@@ -1,4 +1,5 @@
 # Leave prefix as ctrl-b
+set-option -g status-position top
 
 bind-key -T root F1 previous-window
 bind-key -T root F2 next-window
@@ -12,3 +13,12 @@ bind-key -T root S-C-M-) new-window
 # or a tmux binding issue. e.g.
 # bind-key -t vi-copy -T root MouseDragEnd1Pane copy-pipe "tee /tmp/foo"
 bind-key -t vi-copy -T root MouseDragEnd1Pane copy-pipe "reattach-to-user-namespace pbcopy"
+
+
+set -g status-left "#[fg=white,bg=colour249] "
+# Keep flags to a constant length.
+set -g window-status-format \
+  "#[fg=white,bg=colour249] #I) #{=10:window_name}#{?window_flags,#{=1:window_flags}, } "
+  # "#[fg=white,bg=colour249] #I) #{=10:window_name}#{=2:window_flags} "
+set -g window-status-current-format \
+  "#[fg=colour16,bg=colour39,noreverse,bold] #I) #{=10:window_name}#{=2:window_flags} "
