--- a/config.symlink/kitty/kitty.conf
+++ b/config.symlink/kitty/kitty.conf
@@ -551,7 +551,7 @@ tab_bar_edge top
 
 #: Advanced {{{
 
-# shell .
+# shell /usr/local/bin/bash
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
@@ -948,11 +948,11 @@ macos_quit_when_last_window_closed yes
 #: a time or only the current one.
 
 # map kitty_mod+equal     change_font_size all +2.0
-# map cmd+plus            change_font_size all +2.0
+map cmd+equal            change_font_size all +2.0
 # map kitty_mod+minus     change_font_size all -2.0
-# map cmd+minus           change_font_size all -2.0
+map cmd+minus           change_font_size all -2.0
 # map kitty_mod+backspace change_font_size all 0
-# map cmd+0               change_font_size all 0
+map cmd+0               change_font_size all 0
 
 #: To setup shortcuts for specific font sizes::
 
