Update kitty config.

--- a/config.symlink/kitty/kitty.conf
+++ b/config.symlink/kitty/kitty.conf
@@ -113,6 +113,9 @@ font_size 16.0
 #: use large amounts of RAM.
 
 # scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
+# Or's version:
+# scrollback_pager vim - -c 'set nonumber' -c 'w! /tmp/kitty_scrollback' -c 'term ++curwin sh -c "head -c-1 /tmp/kitty_scrollback; rm /tmp/kitty_scrollback"'
+scrollback_pager vim - -c 'set nonumber'
 
 #: Program with which to view scrollback in a new window. The
 #: scrollback buffer is passed as STDIN to this program. If you change
@@ -407,7 +410,7 @@ tab_bar_edge top
 
 #: The margin to the left and right of the tab bar (in pts)
 
-# tab_bar_style fade
+tab_bar_style powerline
 
 #: The tab bar style, can be one of: fade, separator or hidden. In the
 #: fade style, each tab's edges fade into the background color, in the
@@ -434,7 +437,7 @@ tab_bar_edge top
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-# tab_separator " ┇"
+# tab_separator " ┇ "
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
