--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ irssi.symlink/log/
 
 ipython.symlink
 !ipython.symlink/profile_default/ipython_config.py
+
+config.symlink/pgcli/
+!config.symlink/pgcli/config
