--- a/ssh.symlink/config
+++ b/ssh.symlink/config
@@ -4,8 +4,11 @@
 Host *
   AddKeysToAgent yes
   UseKeychain yes
-  IdentityFile ~/.ssh/id_ecdsa
+  IdentityFile ~/Dropbox/Keys/ssh/id_ecdsa
   ForwardAgent yes
+  ServerAliveInterval 240
+  ServerAliveCountMax 30
+  TCPKeepAlive yes
 
 Host vpn
   HostName 107.178.216.174
@@ -13,6 +16,10 @@ Host vpn
 
 Host *.bnd
   ProxyCommand ssh vpn -W `echo %h |sed 's|\.bnd||g'`:%p
+  User beyond
+  ForwardAgent yes
+
+Host *.prd
   User beyond
   ForwardAgent yes
 
