--- a/tmux.mac.conf
+++ b/tmux.mac.conf
@@ -12,7 +12,7 @@ bind-key -T root S-C-M-) new-window
 # For debugging, send to a local file so you can tell if it's a pbcopy issue,
 # or a tmux binding issue. e.g.
 # bind-key -t vi-copy -T root MouseDragEnd1Pane copy-pipe "tee /tmp/foo"
-bind-key -t vi-copy -T root MouseDragEnd1Pane copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi -T root MouseDragEnd1Pane send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 
 set -g status-left "#[fg=white,bg=colour249] "
