--- a/config.symlink/kitty/kitty.conf
+++ b/config.symlink/kitty/kitty.conf
@@ -23,6 +23,7 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
+font_family      Fira Code
 font_size 16.0
 
 #: Font size (in pts)
@@ -104,7 +105,7 @@ font_size 16.0
 
 #: Scrollback {{{
 
-# scrollback_lines 2000
+scrollback_lines 20000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
@@ -112,10 +113,10 @@ font_size 16.0
 #: recommended as it can slow down resizing of the terminal and also
 #: use large amounts of RAM.
 
-# scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
+scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 # Or's version:
 # scrollback_pager vim - -c 'set nonumber' -c 'w! /tmp/kitty_scrollback' -c 'term ++curwin sh -c "head -c-1 /tmp/kitty_scrollback; rm /tmp/kitty_scrollback"'
-scrollback_pager vim - -c 'set nonumber'
+# scrollback_pager vim - -c 'set nonumber'
 
 #: Program with which to view scrollback in a new window. The
 #: scrollback buffer is passed as STDIN to this program. If you change
@@ -141,7 +142,7 @@ scrollback_pager vim - -c 'set nonumber'
 #: scrolling on platforms such as macOS and Wayland. Use negative
 #: numbers to change scroll direction.
 
-# touch_scroll_multiplier 1.0
+touch_scroll_multiplier 1.0
 
 #: Modify the amount scrolled by a touchpad. Note this is only used
 #: for high precision scrolling devices on platforms such as macOS and
@@ -151,7 +152,7 @@ scrollback_pager vim - -c 'set nonumber'
 
 #: Mouse {{{
 
-# mouse_hide_wait 3.0
+mouse_hide_wait 1.0
 
 #: Hide mouse cursor after the specified number of seconds of the
 #: mouse not being used. Set to zero to disable mouse cursor hiding.
@@ -416,7 +417,7 @@ tab_bar_style powerline
 #: fade style, each tab's edges fade into the background color, in the
 #: separator style, tabs are separated by a configurable separator.
 
-# tab_bar_min_tabs 2
+tab_bar_min_tabs 1
 
 #: The minimum number of tabs that must exist before the tab bar is
 #: shown
@@ -554,7 +555,7 @@ tab_bar_style powerline
 
 #: Advanced {{{
 
-# shell /usr/local/bin/bash
+shell /opt/homebrew/bin/bash
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
@@ -817,8 +818,8 @@ macos_quit_when_last_window_closed yes
 # map kitty_mod+j         scroll_line_down
 # map alt+cmd+page_down   scroll_line_down
 # map cmd+down            scroll_line_down
-# map kitty_mod+page_up   scroll_page_up
-# map cmd+page_up         scroll_page_up
+map kitty_mod+page_up   scroll_page_up
+map cmd+page_up         scroll_page_up
 # map kitty_mod+page_down scroll_page_down
 # map cmd+page_down       scroll_page_down
 # map kitty_mod+home      scroll_home
@@ -920,7 +921,15 @@ macos_quit_when_last_window_closed yes
 #: the first tab, 2 the second tab and -1 being the previously active
 #: tab::
 
-#:     map ctrl+alt+1 goto_tab 1
+map cmd+1 goto_tab 1
+map cmd+2 goto_tab 2
+map cmd+3 goto_tab 3
+map cmd+4 goto_tab 4
+map cmd+5 goto_tab 5
+map cmd+6 goto_tab 6
+map cmd+7 goto_tab 7
+map cmd+8 goto_tab 8
+map cmd+9 goto_tab 9
 #:     map ctrl+alt+2 goto_tab 2
 
 #: Just as with new_window above, you can also pass the name of
@@ -1009,6 +1018,8 @@ map cmd+0               change_font_size all 0
 #: }}}
 
 #: Miscellaneous {{{
+
+shell_integration disabled
 
 # map kitty_mod+f11    toggle_fullscreen
 # map kitty_mod+f10    toggle_maximized
