--- a/ssh.symlink/config
+++ b/ssh.symlink/config
@@ -6,9 +6,9 @@ CanonicalizeHostname yes
 CanonicalDomains us-central1-f.c.beyond-pricing-1024.internal
 
 Host *
+  # IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
   AddKeysToAgent yes
   UseKeychain yes
-  IdentityFile ~/Dropbox/Keys/ssh/id_ecdsa
   ForwardAgent yes
   ServerAliveInterval 240
   ServerAliveCountMax 30
@@ -32,7 +32,7 @@ Host signuptwo.local
 
 Host 162.243.146.98
   User root
-  IdentityFile ~/Dropbox/Keys/ssh/digital_ocean.id_ecdsa
+  IdentityFile "~/Dropbox\ (Personal)/Keys/ssh/digital_ocean.id_ecdsa"
 
 Host 10.0.0.3
   User root
@@ -40,7 +40,12 @@ Host 10.0.0.1
   User root
 
 Host 192.254.234.19
-  IdentityFile ~/Dropbox/Keys/ssh/github_tract_ecdsa
+  IdentityFile "~/Dropbox\ (Personal)/Keys/ssh/github_tract_ecdsa"
 
 Host *.us-central1-f.c.beyond-pricing-1024.internal
   User beyond
+
+Host homebridge.local
+  User pi
+  UserKnownHostsFile=/dev/null
+  StrictHostKeyChecking no
