--- a/config.symlink/kitty/kitty.conf
+++ b/config.symlink/kitty/kitty.conf
@@ -24,7 +24,7 @@
 #:     bold_italic_font Operator Mono Medium Italic
 
 font_family      Fira Code
-font_size 16.0
+font_size 14.0
 
 #: Font size (in pts)
 
@@ -159,18 +159,20 @@ mouse_hide_wait 1.0
 #: Set to a negative value to hide the mouse cursor immediately when
 #: typing text.
 
-# url_color #0087bd
-# url_style curly
+url_color #0087bd
+url_style curly
 
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, single, double, curly
 
-# open_url_modifiers kitty_mod
+# open_url_modifiers cmd
+# https://sw.kovidgoyal.net/kitty/conf/#conf-kitty-mouse-mousemap
+mouse_map cmd+left release grabbed,ungrabbed mouse_handle_click link
 
 #: The modifier keys to press when clicking with the mouse on URLs to
 #: open the URL
 
-# open_url_with default
+open_url_with default
 
 #: The program with which to open URLs that are clicked on. The
 #: special value default means to use the operating system's default
@@ -694,7 +696,7 @@ macos_quit_when_last_window_closed yes
 #: Use the traditional full-screen transition, that is faster, but
 #: less pretty.
 
-# macos_show_window_title_in_menubar yes
+macos_show_window_title_in_menubar no
 
 #: Show the title of the currently active window in the macOS menu-
 #: bar, making use of otherwise wasted space.
@@ -767,7 +769,8 @@ macos_quit_when_last_window_closed yes
 
 #:     map ctrl+f>2 set_font_size 20
 
-# kitty_mod ctrl+shift
+kitty_mod ctrl+shift
+# kitty_mod cmd
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
@@ -1083,3 +1086,5 @@ shell_integration disabled
 #: }}}
 
 # }}}
+#
+include ./atom.conf
