--- a/config.symlink/kitty/kitty.conf
+++ b/config.symlink/kitty/kitty.conf
@@ -23,12 +23,13 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_family      Fira Code
+font_family      Fira Code Retina
+bold_font        Fira Code Bold
 font_size 14.0
 
 #: Font size (in pts)
 
-# adjust_line_height  0
+adjust_line_height  -2
 # adjust_column_width 0
 
 #: Change the size of each character cell kitty renders. You can use
