Push for new laptop.

--- a/config.symlink/kitty/atom.conf
+++ b/config.symlink/kitty/atom.conf
@@ -3,8 +3,11 @@ background            #161718
 foreground            #c4c8c5
 cursor                #d0d0d0
 selection_background  #444444
-color0                #000000
-color8                #000000
+color0                #333333
+# color0                #86c38a
+# color0                #000000
+color8                #86c38a
+# color8                #000000
 color1                #fc5ef0
 color9                #fc5ef0
 color2                #86c38a
