--- a/ssh.symlink/config
+++ b/ssh.symlink/config
@@ -1,3 +1,5 @@
+Include ~/.orbstack/ssh/config
+
 # Reminder - this stops ssh tab completion from working
 # HashKnownHosts yes
 
@@ -25,6 +27,10 @@ Host *.bnd
   ForwardAgent yes
 
 Host *.prd
+  User beyond
+  ForwardAgent yes
+
+Host *.stg
   User beyond
   ForwardAgent yes
 
